--- a/views/show-restaurant.html
+++ b/views/show-restaurant.html
@@ -2,10 +2,7 @@
     <header-app search-bar=true></header-app>
     <div class="col-xs-12 resbody">
         <div class="container" ng-if="restaurant.length!=0">
-            <navigator
-                title-level1="ร้านอาหาร"
-                url-level1="#/search"
-                title-level2="{{restaurant.name}}"></navigator>
+            <navigator title-level1="ร้านอาหาร" url-level1="#/search" title-level2="{{restaurant.name}}"></navigator>
             <div class="row resbody__wrapheader visible-xs">
                 <div class="col-md-8">
                     <div>
@@ -34,10 +31,15 @@
                 </div>
                 <div class="col-md-4">
                     <div class="col-xs-12 boxshadow" ng-init="lat=13.76493;">
-                        <div class="row wrapimg" crop-img wrap-height="1.04" ng-style="wrapSize">
-                            <img class="img" ng-style="imgSize" ng-src="https://maps.googleapis.com/maps/api/staticmap?center={{ restaurant.map.lat }},{{ restaurant.map.lng }}&zoom=18&size=600x500&markers=color:red|icon:http://icons.iconarchive.com/icons/paomedia/small-n-flat/64/map-marker-icon.png|{{ restaurant.map.lat }},{{ restaurant.map.lng }}&key=AIzaSyCL_WJGAK__EjZPogQ6W5fFPhJfD-bI0PE"
-                            />
-                        </div>
+                        <a target="_blank" ng-href="http://maps.google.com/maps?&z=18&q={{ restaurant.map.lat }}+{{ restaurant.map.lng }}&ll={{ restaurant.map.lat }}+{{ restaurant.map.lng }}">
+                            <div class="row wrapimg img-effect-3" crop-img wrap-height="1.04" ng-style="wrapSize">
+                                <img class="img" ng-style="imgSize" ng-src="https://maps.googleapis.com/maps/api/staticmap?center={{ restaurant.map.lat }},{{ restaurant.map.lng }}&zoom=18&size=600x500&markers=color:red|icon:http://icons.iconarchive.com/icons/paomedia/small-n-flat/64/map-marker-icon.png|{{ restaurant.map.lat }},{{ restaurant.map.lng }}&key=AIzaSyCL_WJGAK__EjZPogQ6W5fFPhJfD-bI0PE"
+                                />
+                                <div class="icon-hover animated bounceInUp">
+                                    <i class="fa fa-map-o" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -221,4 +223,17 @@
     </div>
 </div>
 
-<!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6gFvIgL4dUvIr48Yt1Uo4qJ8KI-6tO4M&callback=mapRestaurant"></script> -->
+<script type="text/javascript">
+    $(document).ready(function() {
+        $(".img-effect-3").mouseenter(function() {
+            let wrapWidth = $(this).width();
+            let wrapHeight = $(this).height();
+            $(this).find(".icon-hover").show().css({
+                left: ((wrapWidth / 2) - 16) + 'px',
+                top: ((wrapHeight / 2) - 22) + 'px'
+            });
+        }).mouseleave(function() {
+            $(this).find(".icon-hover").hide()
+        });
+    });
+</script>
