--- a/views/add-coupon.html
+++ b/views/add-coupon.html
@@ -26,7 +26,7 @@
                                 <li class="list-group-item text-center">
                                     <p>หากคุณยังไม่เคยเพิ่มข้อมูลร้าน กรุณาเพิ่มข้อมูลร้านก่อน</p>
                                     <p>
-                                        <a href="#/add-restaurant" class="btn btn-lg btn-warning" role="button"><i class="glyphicon glyphicon-plus"></i> เพิ่มร้าน</a>
+                                        <a href="#/add-restaurant" class="btn btn-lg btn-success" role="button"><i class="glyphicon glyphicon-plus"></i> เพิ่มร้าน</a>
                                     </p>
                                 </li>
                             </ul>
@@ -56,7 +56,7 @@
                                 <li class="list-group-item text-center">
                                     <p>ไม่พบร้านของคุณ, กรุณาเพิ่มร้านของคุณก่อน</p>
                                     <p>
-                                        <a href="#/add-restaurant" class="btn btn-lg btn-warning" role="button"><i class="glyphicon glyphicon-plus"></i> เพิ่มร้าน</a>
+                                        <a href="#/add-restaurant" class="btn btn-lg btn-success" role="button"><i class="glyphicon glyphicon-plus"></i> เพิ่มร้าน</a>
                                     </p>
                                 </li>
                             </ul>
