--- a/views/show-coupon.html
+++ b/views/show-coupon.html
@@ -6,7 +6,7 @@
                 title-level1="คูปอง"
                 url-level1="#/coupons"
                 title-level2="{{coupon.name}}"></navigator>
-            <div class="row">
+            <div class="row" ng-if="coupon.length!==0">
                 <div class="panel panel-default showcoupon" style="border-radius: 0px;">
                     <div class="panel-body">
                         <div class="col-md-3 hidden-sm hidden-xs">
@@ -48,6 +48,18 @@
                             <li>ร้านค้าขอสงวนสิทธิ์ในการแก้ไขเปลี่ยนแปลงหรือยกเลิกข้อกำหนดและเงื่อนไข</li>
                         </ul>
                     </div>
+                </div>
+            </div>
+
+            <div class="row text-center resnotfound" ng-if="coupon.length===0">
+                <div class="col-xs-12">
+                    <p><img src="imgs/coupon-not-found.png"></p>
+                    <h1 class="resnotfound__row font-2">ขออภัย, ร้านนี้ไม่มีคูปอง</h1>
+                    <p class="resnotfound__row">
+                        <a href="#/add-coupon" type="button" class="btn btn-warning">
+                            <i class="fa fa-plus" aria-hidden="true"></i> เพิ่มคูปองร้านของคุณ
+                        </a>
+                    </p>
                 </div>
             </div>
         </div>
