--- a/views/show-restaurant.html
+++ b/views/show-restaurant.html
@@ -27,6 +27,11 @@
                                 <p>฿ {{ restaurant.price.min }} - {{ restaurant.price.max }}</p>
                             </div>
                         </div>
+                        <div class="resbody__location hidden-xs">
+                            <div class="text" style="background: #FF3F14; color: #FFFFFF">
+                                {{ restaurant.type }} </div>
+                            <div class="arrow" style="border-top-color: #c30300;"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
