--- a/views/add-restaurant.html
+++ b/views/add-restaurant.html
@@ -6,7 +6,7 @@
     <header-app search-bar=false></header-app>
 </div>
 <div class="container" style="margin-bottom: 30px;">
-    <div class="row blanktop--normal"></div>
+    <div class="row blanktop--normal hidden-sm hidden-xs"></div>
     <navigator title-level1="เพิ่มร้านอาหาร"></navigator>
     <div class="row text-center">
         <h1 class="font-2"><i class="fa fa-cutlery"></i> เพิ่มร้านอาหาร</h1>
