--- a/views/advance-search.html
+++ b/views/advance-search.html
@@ -2,7 +2,7 @@
     <header-app search-bar=false></header-app>
 </div>
 <div class="container" style="margin-bottom: 30px;">
-    <div class="row blanktop--normal"></div>
+    <div class="row blanktop--normal  hidden-sm hidden-xs"></div>
     <navigator title-level1="ค้นหาแบบละเอียด"></navigator>
     <div class="row text-center">
         <h1 class="font-2"><i class="fa fa-search-plus" aria-hidden="true"></i> ค้นหาแบบละเอียด</h1>
