--- a/views/search-map.html
+++ b/views/search-map.html
@@ -2,7 +2,7 @@
     <header-app search-bar=false></header-app>
 </div>
 <div class="container" style="margin-bottom: 30px;">
-    <div class="row blanktop--normal"></div>
+    <div class="row blanktop--normal hidden-sm hidden-xs"></div>
     <navigator title-level1="ค้นหาจากแผนที่"></navigator>
     <div class="row text-center">
         <h1 class="font-2"><i class="fa fa-map" aria-hidden="true"></i> ค้นหาจากแผนที่</h1>
