--- a/views/search-restaurants.html
+++ b/views/search-restaurants.html
@@ -3,7 +3,7 @@
     <div class="col-xs-12 resbody">
         <div class="container">
             <navigator title-level1="ร้านอาหาร"></navigator>
-            <div ng-repeat="res in foundRestaurants">
+            <div ng-repeat="res in foundRestaurants | limitTo:resPerPage">
                 <section class="col-md-4 col-sm-6 bodycontent__item">
                     <div class="col-xs-12 bodycontent__img boxshadow">
                         <a href="#/restaurant/{{ res.id }}">
@@ -40,6 +40,16 @@
                 <div ng-show="($index%3)==2" class="visible-md visible-lg col-md-12"></div>
                 <div ng-show="($index%2)==1" class="visible-sm col-sm-12"></div>
             </div>
+
+            <div class="row text-center" ng-if="foundRestaurants.length!==0">
+                <div class="col-xs-12">
+                    <span class="seemorelist" ng-show="resPerPage < foundRestaurants.length" ng-click="loadMore()">
+                        <span ng-show="!loadingMore"><i class="fa fa-chevron-down" aria-hidden="true"></i> ดูเพิ่มเติม ({{ foundRestaurants.length - resPerPage }})</span>
+                        <span ng-show="loadingMore"><img src="imgs/loadmore.svg">&nbsp; loading</span>
+                    </span>
+                </div>
+            </div>
+            <!-- <button type="button" name="button" ng-click="loadMore()"></button> -->
 
             <div class="row text-center resnotfound" ng-if="foundRestaurants.length==0">
                 <div class="col-xs-12">
