--- a/views/add-restaurant.html
+++ b/views/add-restaurant.html
@@ -71,23 +71,23 @@
                             <div class="row">
                                 <div class="col-md-4">
                                     <div class="checkbox">
-                                        <label><input type="checkbox" ng-model="service.value1" ng-true-value="1" ng-false-value="0">ที่จอดรถ</label>
+                                        <label><input type="checkbox" ng-model="service.value1" ng-true-value="1" ng-false-value="0">{{ services[0].name }}</label>
                                     </div>
                                     <div class="checkbox">
-                                        <label><input type="checkbox" ng-model="service.value2" ng-true-value="1" ng-false-value="0">Wi-Fi</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="checkbox">
-                                        <label><input type="checkbox" ng-model="service.value3" ng-true-value="1" ng-false-value="0">เครื่องปรับอากาศ</label>
-                                    </div>
-                                    <div class="checkbox">
-                                        <label><input type="checkbox" ng-model="service.value4" ng-true-value="1" ng-false-value="0">นิตยสาร</label>
+                                        <label><input type="checkbox" ng-model="service.value2" ng-true-value="1" ng-false-value="0">{{ services[1].name }}</label>
                                     </div>
                                 </div>
                                 <div class="col-md-4">
                                     <div class="checkbox">
-                                        <label><input type="checkbox" ng-model="service.value5" ng-true-value="1" ng-false-value="0">ที่ชาร์จไฟ</label>
+                                        <label><input type="checkbox" ng-model="service.value3" ng-true-value="1" ng-false-value="0">{{ services[2].name }}</label>
+                                    </div>
+                                    <div class="checkbox">
+                                        <label><input type="checkbox" ng-model="service.value4" ng-true-value="1" ng-false-value="0">{{ services[3].name }}</label>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="checkbox">
+                                        <label><input type="checkbox" ng-model="service.value5" ng-true-value="1" ng-false-value="0">{{ services[4].name }}</label>
                                     </div>
                                 </div>
                             </div>
