--- a/views/show-coupon.html
+++ b/views/show-coupon.html
@@ -56,7 +56,7 @@
                     <p><img src="imgs/coupon-not-found.png"></p>
                     <h1 class="resnotfound__row font-2">ขออภัย, ร้านนี้ไม่มีคูปอง</h1>
                     <p class="resnotfound__row">
-                        <a href="#/add-coupon" type="button" class="btn btn-warning">
+                        <a href="#/add-coupon/{{ idRes }}" type="button" class="btn btn-warning">
                             <i class="fa fa-plus" aria-hidden="true"></i> เพิ่มคูปองร้านของคุณ
                         </a>
                     </p>
