--- a/views/index.html
+++ b/views/index.html
@@ -80,11 +80,13 @@
         <div class="container">
             <div class="row bodytopic">
                 <div class="col-xs-12">
-                    <span class="bodytopic__text bodytopic__text--new font-2">ร้านอาหารมาใหม่</span>
-                    <div class="bodytopic__arrow"></div>
-                    <div class="bodytopic__more">
-                        ดูทั้งหมด <i class="glyphicon glyphicon-play"></i>
-                    </div>
+                    <span class="bodytopic__text bodytopic__text--bestscore font-2">ร้านอาหารคะแนนสูงสุด</span>
+                    <div class="bodytopic__arrow--bestscore"></div>
+                    <a href="#/search?order=score">
+                        <div class="bodytopic__more">
+                            ดูทั้งหมด <i class="glyphicon glyphicon-play"></i>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="row bodycontent">
@@ -123,6 +125,56 @@
                     <div ng-show="($index%2)==1" class="visible-sm col-sm-12"></div>
                 </div>
             </div>
+
+            <div class="row bodytopic">
+                <div class="col-xs-12">
+                    <span class="bodytopic__text bodytopic__text--new font-2">ร้านอาหารมาใหม่</span>
+                    <div class="bodytopic__arrow--new"></div>
+                    <a href="#/search?order=new">
+                        <div class="bodytopic__more">
+                            ดูทั้งหมด <i class="glyphicon glyphicon-play"></i>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="row bodycontent">
+                <div ng-repeat="res in newRestaurants">
+                    <section class="col-md-4 col-sm-6 bodycontent__item">
+                        <div class="col-xs-12 bodycontent__img boxshadow">
+                            <a href="#/restaurant/{{ res.id }}">
+                                <span class="location">
+                                        <i class="fa fa-map-marker" aria-hidden="true"></i> {{ res.area }}
+                                    </span>
+                                <div class="row wrapimg img-effect-2" crop-img wrap-height="0.5" ng-style="wrapSize">
+                                    <img class="img" ng-style="imgSize" ng-src="upload/{{ res.img }}_thumb.jpg" />
+                                </div>
+                            </a>
+                        </div>
+                        <div class="row bodycontent__detail">
+                            <div class="col-xs-12">
+                                <div class="col-xs-12 wrap boxshadow">
+                                    <div class="name">
+                                        <a href="#/restaurant/{{ res.id }}">{{ res.name }}</a>
+                                    </div>
+                                    <div class="">{{ res.type }}</div>
+                                    <div>
+                                        <div class="price">
+                                            ฿ {{ res.price.min }}-{{ res.price.max }}
+                                        </div>
+                                        <div class="score" ng-if="res.score>0">
+                                            <i class="fa fa-heart" aria-hidden="true"></i> <b>{{ res.score }}</b>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <div ng-show="($index%3)==2" class="visible-md visible-lg col-md-12"></div>
+                    <div ng-show="($index%2)==1" class="visible-sm col-sm-12"></div>
+                </div>
+            </div>
+
+
         </div>
     </div>
 </div>
